package com.legends.battle;
//Types of commands
public enum Command {
    ATTACK,
    RECOVER,
    SPELL_1,
    SPELL_2
}
