package com.legends.battle;

public enum BattleMode {
    PVE,
    PVP
}
